fix author name wrapping in chat message

--- a/src/client/Chat.less
+++ b/src/client/Chat.less
@@ -25,6 +25,7 @@
 
     .author {
         margin-right: 4px;
+        white-space: nowrap;
     }
 
     #chatMessages {
